--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>DECO LASERrrr</h1>
+<!doctype html>
+<html>
+
+<head>
+<meta charset="UTF-8">
+<title>HTML5 Example by www.techonthenet.com</title>
+</head>
+
+<body>
+<h1>Heading 1</h1>
+<p>This is the content that would appear under Heading 1.</p>
+</body>
+
+</html>
