--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
 <meta charset="UTF-8">
-<title>HTML5 Example by www.techonthenet.com</title>
+<title>DECOLASER</title>
 </head>
 
 <body>
-<h1>Heading 1</h1>
-<p>This is the content that would appear under Heading 1.</p>
+<h1>inicio1</h1>
+<p> contenido </p>
 </body>
 
 </html>
